modifying bootstrap to prevent -15 horizontal scroll

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -752,6 +752,13 @@ pre code {
   margin-left: auto;
 }
 
+.container{
+    .row{
+        margin-left: -15px;
+        margin-right: -15px;
+    }
+}
+
 .container:before,
 .container:after {
   display: table;
@@ -773,8 +780,8 @@ pre code {
 }
 
 .row {
-  margin-right: -15px;
-  margin-left: -15px;
+  margin-right: 0px;
+  margin-left: 0px;
 }
 
 .row:before,
